# pinceau-6

./: .gitignore  Makefile  mypy.init  poetry.toml  pyproject.toml
docs/: model.md
etc/admin/pinceau6/: .eslintrc.js  README.md  index.html  package.json
etc/agent_instructions/: historian.json
etc/docker/: docker-compose.yml
src/: app_factory.py  article.py  celery_factory.py  main.py  main_api.py  prepare_dataset.py  requirements.txt  train_image.py  worker.py
src/api/: __init__.py  blueprint_decorator.py  helpers.py  security_wrapper.py  websocket_decorator.py
src/applications/arxiv/: arxiv_dag.py  module.yml
src/applications/chat/: chat_dag.py
src/applications/huggingface/: train_dag.py
src/applications/inproj/: lnproj_dag.py
src/applications/llama_index/: index_dag.py  rag_2_dag.py  rag_dag.py
src/conf/: config.py
src/core/: utils.py
src/dag/: agent_dag.py  bostik_dag.py  keywords_dag.py  mag_dag.py  story_dag.py  subquery_test_dag.py  test_dag.py  wikipedia_dag.py  zero_shot_dag.py
src/misc/: arxiv_client.py  asyncio.py  elastic_helper.py  functions.py  mongo_json_encoder.py  mongodb_helper.py  policy_extract.py  pydantic_helper.py  singleton_meta.py  taxonomy.py
src/models/: dag_persisted_model.py  graphviz.py  ingestion.py  knowledge_domain.py  knowledge_graph.py  mongo_facet.py  test_subquery.py  trigger_model.py
src/tasks/: a_model_extractor.py  agent_character.py  agent_context_character.py  agent_coordinates_dag.py  agent_echo.py  agent_log.py  agent_mongodb_upsert.py  agent_story_next_step.py  agent_story_update_event.py  agent_task.py  ask_wikipedia_hf_task.py  ask_wikipedia_task.py  build_two_steps_vector_index_task.py  extract_keywords_keybert_task.py  extract_keywords_task.py  extract_triplets_task.py  http_get_text_content_task.py  index_wikipedia_graph_task.py  index_wikipedia_task.py  input_to_graph_task.py  logged_alpaca_llm_task.py  magnetic_declination_task.py  mongo_object_task.py  range_task.py  round_robin_task.py  wait_task.py  zero_shot_branching_task.py  zero_shot_classification_task.py
src/ui/: ag_charts_field.py  chord_diagram_field.py  field_grid.py  field_group.py  fieldable.py  graphviz_dot_field.py  helper.py  sankey_diagram_field.py  tab_field.py
test/: test_dag_actions.py  test_model_schema.py  test_pydantic_field_extraction.py  test_taxonomies.py  test_yield.py
(+207 files in other folders)
