[project]
packages = [{ include = "*", from = "src" }]

[tool.poetry]
name = "pinceau6"
version = "0.1.0"
description = ""
authors = ["Jérôme DIAZ <jerome_diaz@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "4.6.1"
flask-socketio = "^5.3.6"
py-llm-core = "^2.8.2"
flask = "2.1.3"
werkzeug = "2.2.2"
llama-index = "0.11.12"
transformers = "^4.46.2"
torch = "^2.3.1"
#torch = [
#    { markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", version = "^2.3.1" },
#{ markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'", version = "2.2.2" },
#    { markers = "sys_platform == 'linux'", version = "^2.3.1" },
#]
pyvis = "0.3.2"
rake-nltk = "1.0.6"
openai = "1.47.1"
arxiv = "2.1.0"
pypdf = "4.3.1"
pyjwt = "2.8.0"
keybert = "0.8.3"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.1"
pydot = "^2.0.0"
unidecode = "^1.3.8"
elasticsearch = "^8.12.0"
pydantic = "^2.6.1"
pydantic-mongo = "^2.1.0"
fastpbkdf2 = "^0.2"
motor = "^3.3.2"
setuptools = "^69.2.0"
celery = "^5.3.6"
gevent = "^24.2.1"
gunicorn = "^21.2.0"
selenium = "^4.19.0"
chromedriver-py = "^126.0.6478.182"
beautifulsoup4 = "^4.12.3"
python-socketio = { extras = ["client"], version = "^5.11.2" }
apscheduler = "^3.10.4"
aiohttp = "^3.9.5"
evaluate = "^0.4.2"
psutil = "^6.0.0"
llama-index-storage-docstore-mongodb = "^0.2.0"
llama-index-llms-llama-cpp = "^0.2.2"
llama-index-vector-stores-elasticsearch = "^0.3.2"
llama-index-storage-index-store-mongodb = "^0.3.0"
llama-index-llms-huggingface-api = "^0.2.0"
llama-index-embeddings-huggingface = "^0.3.1"
lockfile-parser = "^0.2.0"
pydash = "^8.0.3"
cachetools = "^5.5.0"
semver = "^3.0.2"
pyarn = "^0.2.0"
torchvision = "^0.18.1"
accelerate = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
mypy = "^1.8.0"
memory-profiler = "^0.61.0"
pytest-cov = "^5.0.0"
pip-audit = "^2.7.3"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
mypy_path = "src/"

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
